--- a/project05_1/package.json
+++ b/project05_1/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "project04_1",
+  "name": "project05_1",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -10,10 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "axios": "^1.10.0",
     "react": "^19.1.0",
-    "react-dom": "^19.1.0",
-    "react-router-dom": "^7.7.0"
+    "react-dom": "^19.1.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.30.1",
@@ -25,6 +23,5 @@
     "eslint-plugin-react-refresh": "^0.4.20",
     "globals": "^16.3.0",
     "vite": "^7.0.4"
-  },
-  "proxy" : "http://localhost:3001"
+  }
 }
